Add test suite and update core modules for auth endpoints
- Added test cases for /auth/me, /auth/creds, and /auth/logout endpoints.
- Updated core functions, helpers, and schemas to support new auth logic.
- Modified main.py, exceptions.py, and logging_config.py to handle improved responses and errors.
- All changes tested locally; test/ folder included for developer use only.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ test.py
 core/__pycache__
 notes.md
 data
+logs
+schema/__pycache__
+api/__pycache__
+__pycache__/main.cpython-313.pyc
+test/__pycache__
