feat: integrate frontend into FastAPI and update configuration
- Added complete `frontend/` directory containing HTML, JS, and assets under FastAPI project
- Updated `app.py` to serve frontend via FastAPI StaticFiles and route `/` to index.html
- Prefixed all API endpoints with `/api` for consistent routing
- Modified `Dockerfile` to include frontend build and serve setup
- Added `.dockerignore` file for optimized image builds
- Updated `.gitignore` to exclude new temporary and build-related files
- Revised and restructured README files:
  - Root-level README now documents combined client (API + frontend)
  - `api/api/README.md` dedicated to API documentation
  - `api/frontend/README.md` for frontend-specific usage details

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ __pycache__/main.cpython-313.pyc
 test/__pycache__
 .env
 __pycache__/app.cpython-313.pyc
+frontend/.hash_mapping.json
+frontend/notes.md
+frontend/hash.py
+frontend/venv
