--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: mydylms-client
     env: python
-    branch: master
+    branch: main
     buildCommand: pip install -r requirements.txt
     startCommand: python -m uvicorn app:app --host 0.0.0.0 --port $PORT
     plan: free
