--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
         {
-            "src": "/api(/.*)?",
-            "dest": "/app.py"
+            "src": "/(.*)",
+            "dest": "app.py"
         }
     ]
 }
