Add date sort dropdown to documents section
Added a "Sort" dropdown in dashboard.html allowing users to toggle between
Oldest → Newest and Newest → Oldest document order. Updated dashboard.js to
handle sort selection by reversing the document list and re-rendering the grid.
Also ensured proper initialization and labeling for a cleaner UI.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,24 @@
-api/__pycache__
+api/**pycache**
 api/README.md
-core/__pycache__
+core/**pycache**
 frontend/readme.md
 requirements-dev.txt
 README.md
 .gitignore
 venv
 test
-schema/__pycache__
+schema/**pycache**
 logs
 frontend/src/images/preview_attendance.png
 frontend/src/images/preview_dashboard.png
 frontend/src/images/preview_login.png
 frontend/hash.py
+.vscode
+data
+docs
+.env
+notes-1.md
+notes.md
+README.md
+render.yaml
+requirements-dev.txt
