--- a/.dockerignore
+++ b/.dockerignore
@@ -2,7 +2,7 @@ api/**pycache**
 api/README.md
 core/**pycache**
 static/readme.md
-requirements-dev.txt
+requirements/dev.txt
 README.md
 .gitignore
 venv
@@ -21,6 +21,5 @@ notes-1.md
 notes.md
 README.md
 render.yaml
-requirements-dev.txt
 launcher.py
 winx64.spec
