refactor(render): update startCommand to use correct module path

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
-test.py
-core/__pycache__
-notes.md
-data
-logs
-schema/__pycache__
-api/__pycache__
-__pycache__/main.cpython-313.pyc
+app/core/__pycache__
+app/schema/__pycache__
+app/__pycache__
+app/api/v1/__pycache__
 test/__pycache__
-.env
-__pycache__/app.cpython-313.pyc
 static/.hash_mapping.json
 static/notes.md
 static/hash.py
 static/venv
+test.py
+notes.md
+data
+logs
+__pycache__/main.cpython-313.pyc
+.env
+__pycache__/app.cpython-313.pyc
 notes-1.md
 mcp
 .vscode
