feat(docker): update Dockerfile and add image build workflow

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,23 @@
-api/**pycache**
-api/README.md
-core/**pycache**
-static/readme.md
+app/api/v1/**pycache**
+app/api/**pycache**
+app/core/**pycache**
+app/schema/**pycache**
+app/static/assets/images/preview_attendance.png
+app/static/assets/images/preview_dashboard.png
+app/static/assets/images/preview_login.png
+app/static/hash.py
+app/data
+app/logs
 requirements/dev.txt
+specs/win_64.spec
+specs/mac_arm64.spec
 README.md
+launcher.py
+render.yaml
 .gitignore
+.vscode
+.mcp
+.github
+app/.env
 venv
 test
-schema/**pycache**
-logs
-static/assets/images/preview_attendance.png
-static/assets/images/preview_dashboard.png
-static/assets/images/preview_login.png
-static/hash.py
-.vscode
-data
-docs
-.env
-notes-1.md
-notes.md
-README.md
-render.yaml
-launcher.py
-winx64.spec
