--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -21,6 +21,14 @@ jobs:
           echo "GITHUB_REF_NAME=${GITHUB_REF##*/}"
           git --no-pager log -1 --pretty=oneline
 
+      - name: Install Python
+        run: sudo apt-get update && sudo apt-get install -y python3 python3-pip
+
+      - name: Hash JS/CSS Assets
+        run: |
+          cd static
+          python3 hash.py hash
+
       - name: Build latest image
         run: |
           docker build . -f Dockerfile -t $IMAGE:latest
@@ -39,7 +47,7 @@ jobs:
         run: |
           echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
 
-      - name: Push versioned image (only for tag) - push version first
+      - name: Push versioned image (only for tag)
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           TAG_NAME=${GITHUB_REF##refs/tags/}
