ci: add hashing to static files
- added hashing to static files using hash.py prevents browsers from caching old static files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,11 @@ jobs:
           pip install -r requirements/base.txt
           pip install pyinstaller
 
+      - name: Hash JS/CSS Assets
+        run: |
+          cd app/static
+          python3 hash.py hash
+
       - name: Build executable
         shell: bash
         run: |
