refactor(ci): enhance Docker workflows to ensure image availability and update README versioning logic

--- a/.github/workflows/docker-build-and-test.yml
+++ b/.github/workflows/docker-build-and-test.yml
@@ -66,6 +66,7 @@ jobs:
           platforms: linux/amd64
           # always build locally first; push happens later only on tags
           push: false
+          load: true  # <-- ensure image is available to 'docker tag' and 'docker run'
           tags: |
             ${{ env.IMAGE }}:latest
           # cache for faster builds between runs
