--- a/.github/workflows/update-readme-version.yml
+++ b/.github/workflows/update-readme-version.yml
@@ -1,9 +1,8 @@
 name: Update README with latest release version
 
 on:
-  push:
-    tags:
-      - '*'  # Trigger on any new tag push
+  release:
+    types: [published]
 
 permissions:
   contents: write  # Needed to push changes back
@@ -17,6 +16,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
+          fetch-tags: true
           ref: ${{ github.event.repository.default_branch }}
 
       - name: Determine version from tag
@@ -33,13 +33,13 @@ jobs:
           FILE="README.md"
 
           # Windows: releases/download/<tag>/mydylms-client-v<tag>-win-x64.exe
-          sed -i -E 's|(releases/download/)[^/]+(/mydylms-client-v)[^/]+(-win-x64\.exe)|\1'"${VERSION}"'\2'"${VERSION}"'\3|g' "$FILE"
+          sed -i -E "s#(releases/download/)[^/]+(/mydylms-client-v)[^/]+(-win-x64\.exe)#\1${VERSION}\2${VERSION}\3#g" "$FILE"
 
           # Linux: handle both releases/download and releases/tag links, optional .tar.gz
-          sed -i -E 's|(releases/(download|tag)/)[^/]+(/mydylms-client-v)[^/]+(-linux-x86__64(\.tar\.gz)?)|\1'"${VERSION}"'\3'"${VERSION}"'\4|g' "$FILE"
+          sed -i -E "s#(releases/(download|tag)/)[^/]+(/mydylms-client-v)[^/]+(-linux-x86__64(\.tar\.gz)?)#\1${VERSION}\3${VERSION}\4#g" "$FILE"
 
           # macOS: allow optional .zip suffix
-          sed -i -E 's|(releases/download/)[^/]+(/mydylms-client-v)[^/]+(-macos-arm64(\.zip)?)|\1'"${VERSION}"'\2'"${VERSION}"'\3|g' "$FILE"
+          sed -i -E "s#(releases/download/)[^/]+(/mydylms-client-v)[^/]+(-macos-arm64(\.zip)?)#\1${VERSION}\2${VERSION}\3#g" "$FILE"
 
       - name: Commit and push changes
         env:
