--- a/.github/workflows/vulture.yml
+++ b/.github/workflows/vulture.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
+          cache-dependency-path: |
+            requirements/base.txt
+            requirements/dev.txt
 
       - name: Install tools
         run: |
