fix(docker): ensure container_name is explicitly defined for mydylms-client service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 services:
   mydylms-client:
+    container_name: mydylms-client
     image: virajsh/mydylms-client:latest
     ports:
       - "8000:8000"
